Fixed alignment of creator info

--- a/styles.css
+++ b/styles.css
@@ -157,4 +157,6 @@ body {
 a {
     color: white;
     text-decoration: none;
+    align-items: center;
+    justify-content: center;
 }
